--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
       <HTML>
-        <HEAD>
+        <HEAD></HEAD>
               <BODY>
                     </BODY>
-         </HEAD>
+         
                     </HTML>
                     <html
