Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
       <HTML>
         <HEAD>
-              <BODY>
-                    </BODY>
-         
-                    </HTML>
-                   
+          <BODY>
+          </BODY>
+        </HEAD>
+      </HTML>
