--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
-      <HTML>
-        <HEAD>
-          <BODY>
-          </BODY>
-        </HEAD>
-      </HTML>
+      <html>
+        <head>
+          <body>
+            
+          </body>
+        </head>
+      </html>
