--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
       <html>
         <head>
+          <title></title>
           <body>
-            
           </body>
         </head>
       </html>
