--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
       <html>
         <head>
-          <title></title>
+          <title>
           <body>
           </body>
+          </title>
         </head>
       </html>
