--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
       <html lang="en">
         <head>
-          <link>
+          <link rel="stylesheet" type="text/css" href="style.css">
           <title>
           <body>
           </body>
