Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,9 +2,5 @@
       <html lang="en">
         <head>
           <link rel="stylesheet" type="text/css" href="style.css">
-          <title>
-          <body>
-          </body>
-          </title>
-        </head>
-      </html>
+          <title> Cat Perry's Favorite Cats</title>
+         
