--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
         <head>
           <link rel="stylesheet" type="text/css" href="style.css">
           <title> Cat Perry's Favorite Cats</title>
-         
+         </head>
+         </html>
